*******************************************************************************
Version 1.6.13
*******************************************************************************

2011-03-08 Iain Denniston <iain.denniston(at)gmail.com>
	Fixes for headers when compiled under C++

2011-03-08 Iain Denniston <iain.denniston(at)gmail.com>
	Fix for uuid_unpack incorrect shift precedence.

*******************************************************************************
Version 1.6.12
*******************************************************************************

2011-02-08 Marcelo Roberto Jimenez <mroberto(at)users.sourceforge.net>

	Undo the "incorrectly exported include files".
	
	Legacy applications like linux-igd and igd2-for-linux are using those
	API to create a thread pool for managing their GENA events.

	Leave it to be reworked in 1.8.x.

*******************************************************************************
Version 1.6.11
*******************************************************************************

2011-02-07 Marcelo Roberto Jimenez <mroberto(at)users.sourceforge.net>

	Remove PrintThreadPoolStats() from the public API. This function uses
	a ThreadPool object as an argument, which is not supposed to be
	exported.

2011-02-07 Fabrice Fontaine <fabrice.fontaine(at)orange-ftgroup.com>

	Major bug fix in IPv6 code.

	Major bug fix in miniserver.c for IPv6, bug was introduced when
	changing implementation of get_port in November 20th 2010 ("gena:fix
	several compiler warnings" commit).

2011-02-06 Marcelo Roberto Jimenez <mroberto(at)users.sourceforge.net>

	Fix for incorrectly exported include files.

	The files FreeList.h, LinkedList.h, ThreadPool.h and TimerThread.h
	from the threautil library were being installed in the include
	directory of the library, incorrectly exposing internal data structure
	of the library.

2011-01-30 Chandra Penke <chandrapenke(at)mcntech.com>

	Fix for compilation warnings of unused variables in upnpdebug.c in
	release builds.
